Added my modifications - Ready for submission

--- a/paper/tex/casl.bib
+++ b/paper/tex/casl.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Frederic Gibou at 2014-12-07 00:39:29 -0800 
+%% Created for Mohammad Mirzadeh at 2015-06-25 16:28:50 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Isaac;Burstedde;Ghattas:12:Low-cost-parallel-al,
+	Author = {Isaac, Tobin and Burstedde, Carsten and Ghattas, Omar},
+	Booktitle = {Parallel \& Distributed Processing Symposium (IPDPS), 2012 IEEE 26th International},
+	Date-Added = {2015-06-25 23:27:48 +0000},
+	Date-Modified = {2015-06-25 23:28:45 +0000},
+	Organization = {IEEE},
+	Pages = {426--437},
+	Title = {Low-cost parallel algorithms for 2: 1 octree balance},
+	Year = {2012}}
 
 @article{Almgren:99:20,
 	Author = {R. Almgren},
@@ -4223,15 +4233,15 @@
 	Year = {1988}}
 
 @article{Hoefler;Siebert;Lumsdaine:10:Scalable-communication,
-	title={Scalable communication protocols for dynamic sparse data exchange},
-	author={Hoefler, Torsten and Siebert, Christian and Lumsdaine, Andrew},
-	journal={{ACM SIGPLAN Notices}},
-	volume={45},
-	number={5},
-	pages={159--168},
-	year={2010},
-	publisher={ACM}} 
-	
+	Author = {Hoefler, Torsten and Siebert, Christian and Lumsdaine, Andrew},
+	Journal = {{ACM SIGPLAN Notices}},
+	Number = {5},
+	Pages = {159--168},
+	Publisher = {ACM},
+	Title = {Scalable communication protocols for dynamic sparse data exchange},
+	Volume = {45},
+	Year = {2010}}
+
 @article{Hoff-III;Culver;Keyser;etal:99:Fast-computation-of-,
 	Author = {Kenneth E. {Hoff III} and Tim Culver and John Keyser and Ming Lin and Dinesh Manocha},
 	Date-Added = {2014-12-05 03:04:46 +0000},
