--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -21,7 +21,7 @@
 \usepackage{url}
 \usepackage{tikz}
 \usepackage{diagbox}
-\usepackage{kpfonts}
+%\usepackage{kpfonts}
 
 \DeclareSymbolFont{extraup}{U}{zavm}{m}{n}
 \DeclareMathSymbol{\varheart}{\mathalpha}{extraup}{86}
