--- a/paper/tex/parallel_algorithms.tex
+++ b/paper/tex/parallel_algorithms.tex
@@ -316,3 +316,53 @@ where $a^+ = \max(a, 0)$ and $a^- = \min(a, 0)$. Similar to \cite{Min;Gibou:07:A
 \end{algorithmic}
 \label{alg:overlap}
 \end{algorithm}
+
+
+
+\subsection{Accuracy} \label{sec:accuracy}
+
+The numerical methods detailed in the previous sections are widely used in the level-set community and their accuracy is studied for example in \cite{Min;Gibou:07:A-second-order-accur}. However, in order to validate our implementation, we present a brief convergence analysis.
+
+The advection of an irregular boundary using the semi-Lagrangian method is the perfect candidate to demonstrate the accuracy of our implementation as it makes use of the interpolation routine as well as the reinitialization procedure. We select the benchmark problem proposed in \cite{Enright;Fedkiw;Ferziger;etal:02:A-Hybrid-Particle-Le}. Consider a sphere centered at $(0.35,0.35,0.35)$ and with radius $0.15$ in a domain $[0,1]^3$ and deformed under the divergence free velocity field
+\be \label{eq:velo_enright}
+\begin{cases}
+u(x,y,z) = 2 \sin^2(\pi x)\sin(2 \pi y)\sin(2 \pi z), \\
+v(x,y,z) = - \sin^2(\pi y)\sin(2 \pi x)\sin(2 \pi z), \\
+w(x,y,z) = - \sin^2(\pi z)\sin(2 \pi x)\sin(2 \pi y).
+\end{cases}
+\ee
+forward in time until $t_{1/2}=1$ and then backward to its original state at $t_f=2$. With set the time step to $\Delta t = 5 \Delta x_{min}$, where $\Delta x_{min}$ is the size of the smallest cell in the forest. We monitor the volume loss and the error in the interface location at the final time, when the original shape should be recovered, as the finest resolution of the forest increases. The results are reported in table \ref{tab:accuracy} and figure \ref{fig:accuracy} shows a visualization of the sphere at the initial time, at $t_{1/2}$ when the deformation is maximal, and at the final time. The results are consistent with those reported previously in \cite{Min;Gibou:07:A-second-order-accur} and indicate second order accuracy for the mass loss.
+
+\begin{table}[htbp]
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|}
+\hline
+Finest resolution & $L^\infty$ error on $\phi$ & Rate & Volume loss (\%) & Rate \\
+\hline
+$128^3$  & 1.53E-01 & -    & 1.85E-01 & -    \\
+$256^3$  & 1.18E-01 & 0.38 & 3.73E-02 & 2.31 \\
+$512^3$  & 9.82E-03 & 3.58 & 6.87E-03 & 2.44 \\
+$1024^3$ & 2.56E-03 & 1.94 & 1.92E-03 & 1.84 \\
+$2048^3$ & 1.60E-03 & 0.67 & 5.17E-04 & 1.89 \\
+\hline
+\end{tabular}
+\caption{Study of the convergence of the level-set algorithm using Enright's test \cite{Enright;Fedkiw;Ferziger;etal:02:A-Hybrid-Particle-Le}. The $L^\infty$ error on $\phi$ is computed only close to the interface as this is the relevant observable for an advection procedure.} \label{tab:accuracy}
+\end{center}
+\end{table}
+
+\begin{figure}[htbp]
+\begin{center}
+\begin{tabular}{ccccc}
+\includegraphics[width=.28\textwidth]{figures/enright_0.png}
+&
+\hspace{.1cm}
+&
+\includegraphics[width=.28\textwidth]{figures/enright_1.png}
+&
+\hspace{.1cm}
+&
+\includegraphics[width=.28\textwidth]{figures/enright_2.png}
+\end{tabular}
+\caption{Visualization of the deformation undergone by the sphere for the Enright's test at time 0, $t_{1/2}$ and $t_f$ and colored with the processes ranks. The forest's finest resolution is equivalent to a uniform grid with $2048^3$ cells and contains between 17 (at initial and final times) and 63 (at $t_{1/2}$) million nodes. These results were obtained on the Comet supercomputer with 960 processes (40 compute nodes).} \label{fig:accuracy}
+\end{center}
+\end{figure}
