--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -66,6 +66,9 @@
 \newcommand{\drawcircle}[1]{\textcolor{#1}{$\bullet$}}
 \newcommand{\drawsquare}[1]{\textcolor{#1}{$\blacksquare$}}
 \newcommand{\drawdiamond}[1]{\textcolor{#1}{$\vardiamond$}}
+\newcommand{\ein}{\:\mathbf{in}\:}
+\newcommand{\deq}{\:\texttt{==}\:}
+\newcommand{\dand}{\:\texttt{\&\&}\:}	
 \newtheorem{property}{Property}
 
 \begin{document}
