--- a/paper/tex/conclusion.tex
+++ b/paper/tex/conclusion.tex
@@ -7,9 +7,9 @@ In particular we showed that the scalability of the semi-Lagrangian algorithm, d
 Finally, an application of these algorithms is presented in modeling the solidification process by solving a Stefan problem. This application clearly illustrates the applicability of our algorithms to complex multi-scale problems that cannot be treated practically using the domain decomposition techniques on uniform grids. We believe that our findings can serve as a basis to simulating a wide range of multi-scale and free boundary problems.
 
 \section*{Acknowledgment} 
-The funding for this project was provided by ONR N00014-11-1-0027.
-We would also like to thank the technical staff at the Texas Advanced Computing
-Center (TACC) and the developer community of PETSc library for their valuable
+The funding for this project was provided by ONR N00014-11-1-0027. This work used the Extreme Science and Engineering Discovery Environment (XSEDE), which is supported by National Science Foundation grant number
+ACI-1053575. The authors acknowledge the Texas Advanced Computing
+Center (TACC) at the University of Texas at Austin for providing HPC resources that have contributed to the research results reported within this paper, URL: http://www.tacc.utexas.edu. We would also like to thank the developer community of PETSc library for their valuable
 suggestions during this project.
 The third author acknowledges support by the Hausdorff Center for Mathematics
 (HCM) at Bonn University,
