fixed a minor error in figure caption

--- a/paper/tex/parallel_algorithms.tex
+++ b/paper/tex/parallel_algorithms.tex
@@ -371,6 +371,6 @@ $2048^3$ & 1.60E-03 & 0.67 & 5.17E-04 & 1.89 \\
 &
 \includegraphics[width=.28\textwidth]{figures/enright_blue_2.png}
 \end{tabular}
-\caption{Visualization of the deformation undergone by the sphere for the Enright's test at time 0, $t_{1/2}$ and $t_f$ and colored with the processes ranks. The forest's finest resolution is equivalent to a uniform grid with $2048^3$ cells and contains between 17 (at initial and final times) and 63 (at $t_{1/2}$) million nodes. These results were obtained on the Comet supercomputer with 960 processes (40 compute nodes).} \label{fig:accuracy}
+\caption{Visualization of the deformation undergone by the sphere for the Enright's test at time 0, $t_{1/2}$ and $t_f$. The forest's finest resolution is equivalent to a uniform grid with $2048^3$ cells and contains between 17 (at initial and final times) and 63 (at $t_{1/2}$) million nodes. These results were obtained on the Comet supercomputer with 960 processes (40 compute nodes).} \label{fig:accuracy}
 \end{center}
 \end{figure}
