Some edits on paper

--- a/paper/tex/bonn.bib
+++ b/paper/tex/bonn.bib
@@ -928,13 +928,15 @@
   publisher = {SIAM}
 }
 
-@unpublished{IsaacBursteddeWilcoxEtAl15,
+@ARTICLE{IsaacBursteddeWilcoxEtAl15,
   author = {Tobin Isaac and Carsten Burstedde and Lucas C. Wilcox and Omar Ghattas},
   title = {Recursive algorithms for distributed forests of octrees},
+  journal = {SIAM Journal on Scientific Computing},
+  volume = {37},
+  number = {5},
+  pages = {C497--C531},
   year = {2015},
-  note = {Accepted for publication in SIAM Journal on Scientific Computing},
-  owner = {cbins},
-  url = {http://arxiv.org/abs/1406.0089}
+  doi = {10.1137/140970963}
 }
 
 @BOOK{Kelley03,
@@ -1479,6 +1481,24 @@
   year = {2012},
   note = {Software version 2.0.9b},
   owner = {cbins}
+}
+
+@Article{StewartEdwards04,
+  Title                    = {A framework approach for developing parallel adaptive multiphysics applications},
+  Author                   = {James R. Stewart and H. Carter Edwards},
+  Journal                  = {Finite Elements in Analysis and Design},
+  Year                     = {2004},
+  Number                   = {12},
+  Pages                    = {1599--1617},
+  Volume                   = {40},
+
+  Address                  = {Amsterdam, The Netherlands, The Netherlands},
+  Doi                      = {10.1016/j.finel.2003.10.006},
+  File                     = {StewartEdwards04.pdf:StewartEdwards04.pdf:PDF},
+  ISSN                     = {0168-874X},
+  Keywords                 = {amr},
+  Publisher                = {Elsevier Science Publishers B. V.},
+  Review                   = {Mantle Convection}
 }
 
 @ARTICLE{Temam69,
