--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -22,6 +22,7 @@
 \usepackage{tikz}
 \usepackage{diagbox}
 %\usepackage{kpfonts}
+\usepackage{xspace}
 
 \DeclareSymbolFont{extraup}{U}{zavm}{m}{n}
 \DeclareMathSymbol{\varheart}{\mathalpha}{extraup}{86}
@@ -71,6 +72,8 @@
 \newcommand{\dand}{\:\texttt{\&\&}\:}	
 \newtheorem{property}{Property}
 
+\newcommand{\pforest}{\texttt{p4est}\xspace}
+
 \begin{document}
 
 \title{Parallel Level-Set Methods on Adaptive Tree-Based Grids}
@@ -78,7 +81,9 @@
 \cortext[cor]{Corresponding author: m.mirzadeh@engineering.ucsb.edu}
 \address[MECHE]{Department of Mechanical Engineering, University of California, Santa Barbara, CA 93106-5070, United States.}
 \address[CS]{Department of Computer Science, University of California, Santa Barbara, CA 93106-5110, United States.}
-\address[UBONN]{Institute for Numerical Simulation, University of Bonn, 53115 Bonn, Germany.}
+\address[UBONN]{Institute for Numerical Simulation
+  and Hausdorff Center for Mathematics,
+  University of Bonn, 53115 Bonn, Germany.}
 
 \author[MECHE]{Mohammad Mirzadeh\corref{cor}} \author[MECHE]{Arthur Guittet} \author[UBONN] {Carsten Burstedde} \author[MECHE,CS]{Frederic Gibou}
 
