--- a/paper/tex/parallel_algorithms.tex
+++ b/paper/tex/parallel_algorithms.tex
@@ -24,12 +24,18 @@ algorithms that has recently emerged and shown to scale up to 458,752 cores
 %\cite{Burstedde;Wilcox;Ghattas:11:p4est:-Scalable-Algo}.
 \cite{IsaacBursteddeWilcoxEtAl15}.
 
-In \texttt{p4est} the adaptive grid is represented as a non-overlapping collection of trees that are rooted in individual cells of a common coarse grid (cf.\ Figure \ref{fig:p4est_zcurve}). This common coarse grid, which we will refer to as the ``macromesh'', can in general be an unstructured quadrilateral mesh, in two spatial dimensions, or hexahedral mesh, in three spatial dimensions.
+In \texttt{p4est} the adaptive grid is represented as a non-overlapping collection of trees that are rooted in individual cells of a common coarse grid (cf.\ Figure \ref{fig:p4est_zcurve}).
+This common coarse grid, which we will refer to as the ``macromesh'', can in
+general be an unstructured quadrilateral mesh, in two spatial dimensions, or
+hexahedral mesh, in three spatial dimensions.
+(In \cite{StewartEdwards04} such a coarsest possible grid has been introduced
+as the ``genesis'' mesh.)
+%
 In this article, however, it is sufficient to limit discussions to simple
 uniform Cartesian macromeshes.
 Moreover, it is implicitly assumed that the macromesh is small enough that it
 can be entirely replicated on all processes.
-For instance, in many of the applications that we are considering in this paper the macromesh is simply a single cell.
+For instance, in many of the applications that we are considering in this paper the macromesh is simply a single cubical cell.
 \texttt{p4est} allows for arbitrary refinement and coarsening criteria through defining callback functions.
 In this article the refinement criteria is chosen based on the distance of individual cells to the interface.
 Specifically, a cell $C$ is marked for refinement if
@@ -70,7 +76,10 @@ and ending at cell ``E''.  Next, the one dimensional curve is split up among
 processes either uniformly or by assigning different weights to cells.  Here
 processes are represented via different colors.  Note how using the Z-curve
 naturally leads to clustering of most cells in each domain.  Right: schematic of
-a tree data structure representing this forest and its partitioning.}
+a tree data structure representing this forest and its partitioning.%
+% (The \pforest code actually supports both 2D and 3D meshes whose trees are
+% rotated against each other.)
+}
 \label{fig:p4est_zcurve}
 \end{center}
 \end{figure}
@@ -82,12 +91,13 @@ These algorithms are detailed in sections 3.5 and 3.6 of
 We have specifically extended the latter algorithm such that it can be applied
 to a non-graded refinement pattern.
 This is important because we can entirely skip the 2:1 balance function, which
-was shown to be one of the most time consuming parts of grid adaptation
+was shown to be one of the more time consuming parts of grid adaptation
 in \texttt{p4est}
 \cite{Burstedde;Wilcox;Ghattas:11:p4est:-Scalable-Algo}.
+% \cite{IsaacBursteddeGhattas12}.
 % (it has since been optimized \cite{IsaacBursteddeGhattas12}).
 
-Finally, in \texttt{p4est} trees are linearized, i.e.\ only the leaves are explicitly stored. However, explicit knowledge of the hierarchal structure of the tree is greatly beneficial in several algorithms, e.g. in search operations needed for the interpolation algorithm. Thus, we introduce a simple reconstruction algorithm that recreates a local representation of the entire ``forest'' that is only adapted to local cells and, potentially, the ghost layer. This approach is similar to the ideas introduced in \cite{Bangerth;Burstedde;Heister;etal:11:Algorithms-and-data-} and our tests show that in a typical application they amount to less that $1\%$ of the entire runtime. Algorithm \ref{alg:reconstruction} illustrates how this reconstruction is performed. Given a forest and a layer of ghost cells from \texttt{p4est}, the algorithm generates a local representation of the forest by recursively refining from the root until reaching the same level and location of all leaves in the local forest and the ghost layer. Note that algorithm \ref{alg:reconstruction} does not involve any communication and is load balanced provided that the initial forest is balanced. Figure \ref{fig:reconstruction} illustrates an example where Algorithm \ref{alg:reconstruction} is applied. Note how each process has independently generated a local representation of the forest that is refined to match the same leaves as in the global forest and ghost layer.
+Finally, in \texttt{p4est} trees are linearized, i.e.\ only the leaves are explicitly stored. However, explicit knowledge of the hierarchal structure of the tree is greatly beneficial in several algorithms, e.g.\ in search operations needed for the interpolation algorithm. Thus, we introduce a simple reconstruction algorithm that recreates a local representation of the entire ``forest'' that is only adapted to local cells and, potentially, the ghost layer. This approach is similar to the ideas introduced in \cite{Bangerth;Burstedde;Heister;etal:11:Algorithms-and-data-} and our tests show that in a typical application they amount to less that $1\%$ of the entire runtime. Algorithm \ref{alg:reconstruction} illustrates how this reconstruction is performed. Given a forest and a layer of ghost cells from \texttt{p4est}, the algorithm generates a local representation of the forest by recursively refining from the root until reaching the same level and location of all leaves in the local forest and the ghost layer. Note that algorithm \ref{alg:reconstruction} does not involve any communication and is load balanced provided that the initial forest is balanced. Figure \ref{fig:reconstruction} illustrates an example where Algorithm \ref{alg:reconstruction} is applied. Note how each process has independently generated a local representation of the forest that is refined to match the same leaves as in the global forest and ghost layer.
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width = \textwidth]{figures/reconstruct.pdf}
@@ -141,11 +151,11 @@ As indicated earlier, we use the semi-Lagrangian method to solve equation \eqref
 \label{eq:sl}
 \ee
 The semi-Lagrangian method integrates equations \eqref{eq:sl} backward in time,
-i.e.\ starting from the grid $G^{n+1}$ (computed in iteratively as explained
+i.e.\ starting from the grid $G^{n+1}$ (computed iteratively as explained
 later on), we simply write $\phi^{n+1}(\underline{\mathbf{X}}^{n+1}) =
 \phi(\underline{\mathbf{X}}(t^{n+1}), t^{n+1}) =
 \phi(\underline{\mathbf{X}}(t^n), t^n) = \phi^n(\underline{\mathbf{X}}_d)$.
-Here, the characteristic curves are chosen such that $\underline{\mathbf{X}}(t^{n+1})$ are simply the coordinates of grids points of $G^{n+1}$, and $\underline{\mathbf{X}}_d$ are the departure points, which are computed using the second-order midpoint method \cite{Min;Gibou:07:A-second-order-accur}:
+Here, the characteristic curves are chosen such that $\underline{\mathbf{X}}(t^{n+1})$ are the coordinates of grid points of $G^{n+1}$, and $\underline{\mathbf{X}}_d$ are the departure points, which are computed using the second-order midpoint method \cite{Min;Gibou:07:A-second-order-accur}:
 \bea
 \underline{\mathbf{X}}^\star &=& \underline{\mathbf{X}}^{n+1} - \frac{\Delta t}{2} \underline{\mbf{u}}^{n}(\underline{\mathbf{X}}^n),	   \label{eq:xstar}      \\
 \underline{\mathbf{X}}_d     &=& \underline{\mathbf{X}}^{n+1} - \Delta t \underline{\mbf{u}}^{n+\frac{1}{2}}(\underline{\mathbf{X}}^\star), \label{eq:xdeparture}
@@ -181,7 +191,7 @@ problem.
 This assumption, however, defeats the purpose of using a semi-Lagrangian
 approach, whose purpose is to enable large CFL values.
 
-One remedy to this problem, proposed in \cite{Thomas;Cote:95:Massively-parallel-s} for uniform grids, is to increase the size of ghost layer to $\lceil \text{CFL} \rceil$. For large values of the $\text{CFL}$ number, however, this approach can substantially increase the communication volume. Moreover, this simple approach does not work in the process of generating $G^{n+1}$ due to repartitioning. Indeed, $G^{n+1}$ is built iteratively and load balancing is enforced by repartitioning at each sub-iteration. Therefore, after one such sub-iteration, the backtracked points can end up outside of the initial ghost layer. An alternative approach would be to handle local and remote interpolations separately. Our remote interpolation algorithm is composed of three separate phases. In the first phase, which we call buffering, every process searches for all departure points inside the local trees. If the point is owned by a local cell, it is added to a local buffer, otherwise we find the process which owns the point and add the point to a separate buffer belonging to the found rank. Note that searching the point in the local tree is performed recursively using the hierarchal reconstruction (cf.\ algorithm \ref{alg:reconstruction}). Moreover, the owner's rank is found by computing the Z-index of the point and then using a binary search on the Z-curve. This is already implemented in \texttt{p4est} and explained in details in section 2.5 of \cite{Burstedde;Wilcox;Ghattas:11:p4est:-Scalable-Algo}.
+One remedy to this problem, proposed in \cite{Thomas;Cote:95:Massively-parallel-s} for uniform grids, is to increase the size of ghost layer to $\lceil \text{CFL} \rceil$. For large values of the $\text{CFL}$ number, however, this approach can substantially increase the communication volume. Moreover, this simple approach does not work in the process of generating $G^{n+1}$ due to repartitioning. Indeed, $G^{n+1}$ is built iteratively and load balancing is enforced by repartitioning at each sub-iteration. Therefore, after one such sub-iteration, the backtracked points can end up outside of the initial ghost layer. An alternative approach would be to handle local and remote interpolations separately. Our remote interpolation algorithm is composed of three separate phases. In the first phase, which we call buffering, every process searches for all departure points inside the local trees. If the point is owned by a local cell, it is added to a local buffer, otherwise we find the process which owns the point and add the point to a separate buffer belonging to the found rank. Note that searching the point in the local tree is performed recursively using the hierarchal reconstruction (cf.\ Algorithm~\ref{alg:reconstruction}). Moreover, the owner's rank is found by computing the Z-index of the point and then using a binary search on the Z-curve. This is already implemented in \texttt{p4est} and explained in details in section 2.5 of \cite{Burstedde;Wilcox;Ghattas:11:p4est:-Scalable-Algo}.
 
 Once buffering is done, every process knows exactly how many messages it needs to send and to which processes. This also implicitly defines processes that will later on send a reply message to this process. However, at this point no process knows which processes to expect a message from. We solve this problem using a simple \textit{communication matrix} (see Figure \ref{fig:communication}). Our approach is very similar to the ``Personalized Census ($\mathcal{PCX}$)'' algorithm described in \cite{Hoefler;Siebert;Lumsdaine:10:Scalable-communication}. Another similar approach is the ``Notify'' algorithm introduced in \cite{Isaac;Burstedde;Ghattas:12:Low-cost-parallel-al}. Furthermore, the MPI-3 standard introduces non-blocking collectives and Remote Memory Access (RMA) operations which enable new ways of solving the communication problem. For instance, authors in \cite{Hoefler;Siebert;Lumsdaine:10:Scalable-communication} descried the ``Non-blocking Consensus ($\mathcal{NBX}$)'' and ``Remote Summation ($\mathcal{RSX}$)'' algorithms which make use of such operations and have better theoretical communication complexities. With the exception of $\mathcal{RSX}$ algorithm, which was not tested in this study, all remaining algorithms produced similar timing and scaling. Thus we have decided to describe our algorithm based on the idea of the \textit{communication matrix}.
 
@@ -234,7 +244,7 @@ where $S_i$ and $R_i$ denote the number of messages sent and received, respectiv
 \State $\mathit{done} \gets \mathit{false}$ \Comment{Phase III -- interpolation}
 \State $it \gets \mathit{local\_buff}[mpirank].\texttt{begin()}$ 
 \While {$\mathit{!done}$} 
-	\If {$\mathit{it} \not= \mathit{buff[mpirank]}.\texttt{end()}$}
+	\If {$\mathit{it} \not= \mathit{local\_buff[mpirank]}.\texttt{end()}$}
 		\State $\mathit{values} \gets \texttt{process\_local\_interpolation(}it\texttt{)}$ \Comment{process local interpolations}
 		\State $\texttt{++}\mathit{it}$
 	\EndIf
